API_Reference/pymilvus/v2.3.x/ORM/utility/mkts_from_hybridts.md

# mkts_from_hybridts()

This operation makes a hybrid timestamp from another hybrid timestamp.

## Request Syntax

```python
mkts_from_hybridts(
    hybridts: int,
    milliseconds: float = 0.0,
    delta: datetime.timedelta | None,
)
```

__PARAMETERS:__

- __hybridts__ (_float_) -

    __[REQUIRED]__

    A hybrid timestamp.

    A hybrid timestamp is a non-negative integer ranging from __0__ to __18446744073709551615__.

- __milliseconds__ (_float_) -
An incremental time interval in milliseconds.

- __delta__ (_Optional[timedelta]_) -

    A __datetime.timedelta__ object that represents the duration expressing the difference between two `date`, `time`, or `datetime` instances to microsecond resolution.

__RETURN TYPE:__

_int_

__RETURNS:__
A hybrid timestamp, which is a non-negative integer ranging from __0__ to __18446744073709551615__.

## __Examples__

```python
import time
from datetime import timedelta
from pymilvus import utility

# Get a UNIX epoch timestamp
epoch1 = time.time()

# Make a hybrid timestamp
ts = utility.mkts_from_unixtime(epoch1)

# Set up a timedelta object
delta = timedelta(
    days=50,
    seconds=27,
    microseconds=10,
    milliseconds=29000,
    minutes=5,
    hours=8,
    weeks=2
)

# Get a hybrid timestamp
mkts_from_hybridts(
    hybridts=ts,
    milliseconds=1000,
    delta=delta,
)
```

